crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_annotation_type_alias.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_annotation_type_alias.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..406,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..26,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..20,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 7..19,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 11..18,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 17..18,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 23..26,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 48..75,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 53..54,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 54..69,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 55..68,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 55..56,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 60..67,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 66..67,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 72..75,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 98..127,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 103..104,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 104..121,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 105..120,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 106..108,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 112..119,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 118..119,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 124..127,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 153..183,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 158..159,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 159..177,
                            node_index: NodeIndex(None),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 160..176,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 162..164,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 168..175,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 174..175,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 180..183,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 205..223,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 210..211,
                            id: Name("Y"),
                            ctx: Store,
                        },
                    ),
                    type_params: None,
                    value: Yield(
                        ExprYield {
                            node_index: NodeIndex(None),
                            range: 215..222,
                            value: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 221..222,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 254..271,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 259..260,
                            id: Name("Y"),
                            ctx: Store,
                        },
                    ),
                    type_params: None,
                    value: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 264..270,
                            target: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 264..265,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 269..270,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 308..334,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 313..314,
                            id: Name("Y"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 314..328,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 315..327,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 315..316,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Await(
                                                ExprAwait {
                                                    node_index: NodeIndex(None),
                                                    range: 319..326,
                                                    value: NumberLiteral(
                                                        ExprNumberLiteral {
                                                            node_index: NodeIndex(None),
                                                            range: 325..326,
                                                            value: Int(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 331..334,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 357..375,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 362..363,
                            id: Name("Y"),
                            ctx: Store,
                        },
                    ),
                    type_params: None,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(None),
                            range: 367..374,
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 373..374,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | type X[T: (yield 1)] = int      # TypeVar bound
  |            ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar bound
2 | type X[T = (yield 1)] = int     # TypeVar default
3 | type X[*Ts = (yield 1)] = int   # TypeVarTuple default
  |


  |
1 | type X[T: (yield 1)] = int      # TypeVar bound
2 | type X[T = (yield 1)] = int     # TypeVar default
  |             ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar default
3 | type X[*Ts = (yield 1)] = int   # TypeVarTuple default
4 | type X[**Ts = (yield 1)] = int  # ParamSpec default
  |


  |
1 | type X[T: (yield 1)] = int      # TypeVar bound
2 | type X[T = (yield 1)] = int     # TypeVar default
3 | type X[*Ts = (yield 1)] = int   # TypeVarTuple default
  |               ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVarTuple default
4 | type X[**Ts = (yield 1)] = int  # ParamSpec default
5 | type Y = (yield 1)              # yield in value
  |


  |
2 | type X[T = (yield 1)] = int     # TypeVar default
3 | type X[*Ts = (yield 1)] = int   # TypeVarTuple default
4 | type X[**Ts = (yield 1)] = int  # ParamSpec default
  |                ^^^^^^^ Syntax Error: yield expression cannot be used within a ParamSpec default
5 | type Y = (yield 1)              # yield in value
6 | type Y = (x := 1)               # named expr in value
  |


  |
3 | type X[*Ts = (yield 1)] = int   # TypeVarTuple default
4 | type X[**Ts = (yield 1)] = int  # ParamSpec default
5 | type Y = (yield 1)              # yield in value
  |           ^^^^^^^ Syntax Error: yield expression cannot be used within a type alias
6 | type Y = (x := 1)               # named expr in value
7 | type Y[T: (await 1)] = int      # await in bound
  |


  |
4 | type X[**Ts = (yield 1)] = int  # ParamSpec default
5 | type Y = (yield 1)              # yield in value
6 | type Y = (x := 1)               # named expr in value
  |           ^^^^^^ Syntax Error: named expression cannot be used within a type alias
7 | type Y[T: (await 1)] = int      # await in bound
8 | type Y = (await 1)              # await in value
  |


  |
5 | type Y = (yield 1)              # yield in value
6 | type Y = (x := 1)               # named expr in value
7 | type Y[T: (await 1)] = int      # await in bound
  |            ^^^^^^^ Syntax Error: await expression cannot be used within a TypeVar bound
8 | type Y = (await 1)              # await in value
  |


  |
6 | type Y = (x := 1)               # named expr in value
7 | type Y[T: (await 1)] = int      # await in bound
8 | type Y = (await 1)              # await in value
  |           ^^^^^^^ Syntax Error: await expression cannot be used within a type alias
  |
